# geographiclib-rs

./: .gitignore  .gitmodules  CHANGES.md  Cargo.toml  README.md  bors.toml
.github/workflows/: test.yml
benches/: baseline_c_benchmark.rs  geodesic_benchmark.rs  geomath_benchmark.rs  util.rs
examples/: direct.rs
python/: Pipfile  README.md  accumulator.py  geodesic.py  geodesiccapability.py  geodesicline.py  geomath.py  polygonarea.py  test.prof  test.py  test_geodesic.py  try_geodesic.py  values.json
script/: download-test-data.sh
src/: accumulator.rs  geodesic.rs  geodesic_capability.rs  geodesic_line.rs  geodesiccapability.rs  geodesicline.rs  geomath.rs  gnomonic.rs  lib.rs  main.rs  polygon_area.rs  polygonarea.rs
test_fixtures/: .gitignore
tests/: geodesic_line_tests.rs  geodesic_tests.rs  geomath_tests.rs
utilities/: Cargo.toml
utilities/src/: delta_entry.rs  lib.rs  util.rs
