[package]
name = "geographiclib-rs"
version = "0.2.2"
license = "MIT"
edition = "2018"

description = "A port of geographiclib in Rust."
authors = ["Federico Dolce <psykopear@gmail.com>", "Michael Kirk <michael.code@endoftheworl.de>"]
repository = "https://github.com/georust/geographiclib-rs"
keywords = ["gis", "geo", "geography", "geospatial"]
documentation = "https://docs.rs/geographiclib-rs"
readme = "README.md"

[features]
# Run tests against Karney's GeodTest.dat test cases. 
# You must run script/download-test-data.sh before using this feature
test_full = []

# Run tests against Karney's abridged GeodTest-short.dat test cases. 
# You must run script/download-test-data.sh before using this feature
test_short = []

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.3.1"
geographiclib = "0.1.0"

[[bench]]
name = "geodesic_benchmark"
harness = false
